hide charts by default to prevent flickering

--- a/style/base/chart.scss
+++ b/style/base/chart.scss
@@ -1,4 +1,5 @@
 .chart-wrapper {
+    display: none;
 
     .chart {
         height: 120px; // 100px for the chart + room for the max flag
